# retrieve-and-generate

./: .gitignore  LICENSE  README.md  pyproject.toml  run_api.sh
etc/: .secrets
models/: api_models.py
src/: __init__.py  app.py
src/routers/: create_embeddings.py  health_check.py  query.py
src/services/chunkers/: chunk_text.py
src/services/embeddings/: create_embeds.py  vector_db.py
src/services/parsers/: parse_pdf.py
src/services/rag/: generate.py  retrieve.py
src/utils/: auth.py
streamlit/: app.py
